@@ -115,6 +115,7 @@ def prepare_args_parser():
     svn2stage_parser = subparsers.add_parser('svn2stage', help='svn sync repository and copy to staging folder')
     sync_parser = subparsers.add_parser('sync', help='sync files to be installed from server to temp folder')
     synccopy_parser = subparsers.add_parser('synccopy', help='sync files to be installed from server to temp folder and copy files from temp folder to target paths')
+    test_import_parser = subparsers.add_parser('test-import', help='test the import of required modules')
     trans_parser = subparsers.add_parser('trans', help='translate svn map files from one format to another')
     unwtar_parser = subparsers.add_parser('unwtar', help='uncompress .wtar files in current folder')
     up_repo_rev_parser = subparsers.add_parser('up-repo-rev', help='upload repository revision file to admin folder')
@@ -133,7 +134,7 @@ def prepare_args_parser():
                         create_repo_rev_file_parser, verify_index_parser),
              'do_something': (version_parser, help_parser, parallel_run_parser,
                               unwtar_parser, check_checksum_parser, create_folders_parser,
-                              set_exec_parser)
+                              set_exec_parser, test_import_parser)
             }
     for the_mode, parsers in modes.iteritems():
         for some_parser in parsers:
